# swapi_rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: dev.toml  prod.toml
sql/: data.sql
src/: config.rs  config_loader.rs  feature_flags.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  swapi.rs
src/api/: handlers.rs
src/domain/: entities.rs  repository.rs
src/infrastructure/: config_loader.rs  config_models.rs  db_pool.rs  db_schema.rs  feature_flags.rs  mod.rs
