[package]
name = "swapi_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "2.2", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full", "macros", "rt"] }
config = "0.14"
launchdarkly-server-sdk = "2.6.0"

[dev-dependencies]
actix-rt = "2"
